--- a/apps/web/public/locales/np/common.json
+++ b/apps/web/public/locales/np/common.json
@@ -1,3 +1,18 @@
 {
-  "Add Project": "project halnuhos"
+  "about": "About",
+  "add-project": "Add Project",
+  "profile": "Profile",
+  "edit-profile": "Edit Profile",
+  "sign-out": "Sign Out",
+  "search": "Search",
+  "login": "Login",
+  "cancel": "Cancel",
+  "close": "Close",
+  "submit": "Submit",
+  "continue": "Continue",
+  "edit": "Edit",
+  "delete": "Delete",
+  "yes": "Yes",
+  "no": "No",
+  "select-image": "Select Image"
 }
