--- a/apps/web/public/locales/ko/common.json
+++ b/apps/web/public/locales/ko/common.json
@@ -1,4 +1,12 @@
 {
+  "project-shelf": "Project Shelf",
+  "discover-projects": "Discover Projects",
+  "join-community": "Join the Community",
+  "rankings": "Rankings",
+  "explore": "Explore",
+  "join-digest": "Join our weekly digest",
+  "get-promotions": "Get exclusive promotions & updates straight to your inbox.",
+  "subscribe": "Subscribe",
   "about": "About",
   "add-project": "Add Project",
   "profile": "Profile",
