--- a/apps/web/public/locales/es/about.json
+++ b/apps/web/public/locales/es/about.json
@@ -1,4 +1,5 @@
 {
   "title": "Project Shelf Contributors",
-  "seo-title": "About Project Shelf"
+  "seo-title": "About Project Shelf",
+  "contributions": "Contributions"
 }
