--- a/apps/web/public/locales/en/about.json
+++ b/apps/web/public/locales/en/about.json
@@ -1,5 +1,5 @@
 {
   "title": "Project Shelf Contributors",
   "seo-title": "About Project Shelf",
-  "contributions": "Contributions"
+  "contributions": "contributions"
 }
