feat: top page for projects and creators

--- a/apps/web/public/locales/en/common.json
+++ b/apps/web/public/locales/en/common.json
@@ -8,6 +8,9 @@
   "get-promotions": "Get exclusive promotions & updates straight to your inbox.",
   "subscribe": "Subscribe",
   "about": "About",
+  "top": "Top",
+  "projects": "Projects",
+  "creators": "Creators",
   "add-project": "Add Project",
   "profile": "Profile",
   "edit-profile": "Edit Profile",
