--- a/apps/web/public/locales/es/common.json
+++ b/apps/web/public/locales/es/common.json
@@ -8,6 +8,7 @@
   "get-promotions": "Get exclusive promotions & updates straight to your inbox.",
   "subscribe": "Subscribe",
   "about": "Acerca",
+  "top": "Top",
   "add-project": "Añadir Proyecto",
   "profile": "Perfil",
   "edit-profile": "Editar Perfil",
