--- a/apps/web/public/locales/ne/common.json
+++ b/apps/web/public/locales/ne/common.json
@@ -8,6 +8,7 @@
   "get-promotions": "Get exclusive promotions & updates straight to your inbox.",
   "subscribe": "Subscribe",
   "about": "About",
+  "top": "Top",
   "add-project": "Add Project",
   "profile": "Profile",
   "edit-profile": "Edit Profile",
