fix: add missing translation pages, minor tweaks

--- a/apps/web/public/locales/en/home.json
+++ b/apps/web/public/locales/en/home.json
@@ -22,5 +22,6 @@
   "newsletter-title": "Join our newsletter",
   "newsletter-subtitle": "Get the latest updates and news about Project Shelf",
   "enter-email": "Enter your email",
-  "subscribe": "Subscribe"
+  "subscribe": "Subscribe",
+  "total-likes": "Total Likes"
 }
