--- a/apps/web/public/locales/hi/home.json
+++ b/apps/web/public/locales/hi/home.json
@@ -1,6 +1,27 @@
 {
   "title": "Discover the coolest projects",
-  "description": "Upload and share your projects with a community. Easy tools and a simple interface make it easy to collaborate and get feedback. A perfect place for students, professionals, and hobbyists to showcase their work.",
-  "seo-title": "Welcome to Project Shelf",
-  "signup": "Sign up"
+  "description": "Upload and share your projects with our community. A perfect place for students, professionals, and hobbyists to showcase their work.",
+  "seo-title": "Project Shelf",
+  "signup": "Sign up",
+  "likes:": "Likes",
+  "top-creators": "Top Creators",
+  "top-creators-subtitle": "Checkout top rated creators in our community",
+  "view-rankings": "View Rankings",
+  "discover-more-projects": "Discover More Projects",
+  "discover-more-projects-subtitle": "Explore new trending projects",
+  "see-all-projects": "See All Projects",
+  "see-project": "See Project",
+  "how-it-works": "How it works",
+  "find-out": "Find out how to get started",
+  "sign-up": "Sign up",
+  "sign-up-description": "Sign up with your GitHub account.",
+  "create-a-project": "Create a project",
+  "create-project-description": "Create a project and add a description, tags, and a cover image.",
+  "share-project": "Share your project",
+  "share-project-description": "Share your project with the community and get feedback.",
+  "newsletter-title": "Join our newsletter",
+  "newsletter-subtitle": "Get the latest updates and news about Project Shelf",
+  "enter-email": "Enter your email",
+  "subscribe": "Subscribe",
+  "total-likes": "Total Likes"
 }
