feat: add about-us in footer section

--- a/apps/web/public/locales/en/common.json
+++ b/apps/web/public/locales/en/common.json
@@ -3,6 +3,7 @@
   "discover-projects": "Discover the coolest projects",
   "join-community": "Join the Community",
   "rankings": "Rankings",
+  "about-us": "About Us",
   "explore": "Explore",
   "join-digest": "Join our weekly digest",
   "get-promotions": "Get exclusive promotions & updates straight to your inbox.",
