--- a/apps/web/public/locales/en/project.json
+++ b/apps/web/public/locales/en/project.json
@@ -11,5 +11,6 @@
   "tags": "Tags",
   "likes": "Likes",
   "like": "Like",
-  "liked": "Liked"
+  "liked": "Liked",
+  "report-success": "Project reported successfully"
 }
