--- a/apps/web/public/locales/es/project.json
+++ b/apps/web/public/locales/es/project.json
@@ -1,5 +1,6 @@
 {
   "delete-success": "Project deleted successfully",
   "delete-fail": "Project deletion failed",
-  "are-you-sure": "Are you sure you want to delete this project?"
+  "are-you-sure": "Are you sure you want to delete this project?",
+  "report-success": "Project reported successfully"
 }
