--- a/apps/web/public/locales/en/project.json
+++ b/apps/web/public/locales/en/project.json
@@ -12,5 +12,21 @@
   "likes": "Likes",
   "like": "Like",
   "liked": "Liked",
-  "report-success": "Project reported successfully"
+  "report-success": "Project reported successfully",
+  "reporting-this-post": "Why are you reporting this post?",
+  "report": "Report",
+  "description-report": "Your report is anonymous, except if you&apos;re reporting an intellectual property infringement. If someone is in immediate danger, call the local emergency sevices.",
+  "reason": "Reason",
+  "help": "Help us understand the problem.",
+  "category": "Please select a category to report",
+  "submit-report": "Submit Report",
+  "spam": "Spam",
+  "nudity": "Nudity",
+  "scam": "Scam",
+  "illegal": "Illegal",
+  "violence": "Violence",
+  "suicide-or-self-injury": "Suicide or self injury",
+  "hate-speech": "Hate speech",
+  "something-else": "Something else",
+  "write-a-message": "Write a message"
 }
