add languages for the report modal

--- a/apps/web/public/locales/hi/project.json
+++ b/apps/web/public/locales/hi/project.json
@@ -1,5 +1,32 @@
 {
-  "delete-success": "Project deleted successfully",
-  "delete-fail": "Project deletion failed",
-  "are-you-sure": "Are you sure you want to delete this project?"
+  "delete-success": "प्रोजेक्ट सफलतापूर्वक हटा दिया गया",
+  "delete-fail": "प्रोजेक्ट हटाने में विफल",
+  "are-you-sure": "क्या आप वाकई इस प्रोजेक्ट को हटाना चाहते हैं?",
+  "created-at": "{{date}} को बनाया गया",
+  "created-by": "के द्वारा बनाया गया",
+  "description": "विवरण",
+  "details": "विवरण",
+  "view-website": "वेबसाइट देखें",
+  "view-github": "GitHub पर देखें",
+  "tags": "टैग",
+  "likes": "पसंद",
+  "like": "पसंद",
+  "liked": "पसंद किया गया",
+  "report-success": "प्रोजेक्ट सफलतापूर्वक रिपोर्ट किया गया",
+  "reporting-this-post": "आप इस पोस्ट की रिपोर्ट क्यों कर रहे हैं?",
+  "report": "रिपोर्ट",
+  "description-report": "आपकी रिपोर्ट गुमनाम है, केवल यदि आप एक बौद्धिक संपदा उल्लंघन की रिपोर्ट कर रहे हैं तो नहीं। यदि कोई तत्काल खतरे में हो तो स्थानीय आपातकालीन सेवाओं को बुलाएं।",
+  "reason": "कारण",
+  "help": "हमें समस्या को समझने में मदद करें।",
+  "category": "रिपोर्ट करने के लिए कृपया एक श्रेणी चुनें",
+  "submit-report": "रिपोर्ट सबमिट करें",
+  "spam": "स्पैम",
+  "nudity": "नग्नता",
+  "scam": "धोखाधड़ी",
+  "illegal": "अवैध",
+  "violence": "हिंसा",
+  "suicide-or-self-injury": "आत्महत्या या आत्म-घात",
+  "hate-speech": "नफ़रत भाषण",
+  "something-else": "कुछ और",
+  "write-a-message": "संदेश लिखें"
 }
