--- a/apps/web/public/locales/ko/project.json
+++ b/apps/web/public/locales/ko/project.json
@@ -1,5 +1,32 @@
 {
-  "delete-success": "Project deleted successfully",
-  "delete-fail": "Project deletion failed",
-  "are-you-sure": "Are you sure you want to delete this project?"
+  "delete-success": "프로젝트가 성공적으로 삭제되었습니다.",
+  "delete-fail": "프로젝트 삭제 실패",
+  "are-you-sure": "이 프로젝트를 삭제하시겠습니까?",
+  "created-at": "{{date}}에 생성됨",
+  "created-by": "만든 사람",
+  "description": "설명",
+  "details": "세부 정보",
+  "view-website": "웹사이트 보기",
+  "view-github": "GitHub에서 보기",
+  "tags": "태그",
+  "likes": "좋아요",
+  "like": "좋아요",
+  "liked": "좋아함",
+  "report-success": "프로젝트가 성공적으로 신고되었습니다.",
+  "reporting-this-post": "이 게시물을 신고하는 이유는 무엇인가요?",
+  "report": "신고",
+  "description-report": "신고는 익명으로 처리됩니다. 지적 재산권 침해를 신고하는 경우를 제외하면 신고자의 정보는 공개되지 않습니다. 긴급한 상황인 경우 지역 응급 서비스에 전화하십시오.",
+  "reason": "이유",
+  "help": "문제를 이해하는 데 도움을 주십시오.",
+  "category": "신고할 카테고리를 선택하십시오.",
+  "submit-report": "신고 제출",
+  "spam": "스팸",
+  "nudity": "노출",
+  "scam": "사기",
+  "illegal": "불법",
+  "violence": "폭력",
+  "suicide-or-self-injury": "자살 또는 자해",
+  "hate-speech": "혐오 발언",
+  "something-else": "기타",
+  "write-a-message": "메시지 작성"
 }
