fixes from the commit

--- a/apps/web/public/locales/en/project.json
+++ b/apps/web/public/locales/en/project.json
@@ -28,5 +28,7 @@
   "suicide-or-self-injury": "Suicide or self injury",
   "hate-speech": "Hate speech",
   "something-else": "Something else",
-  "write-a-message": "Write a message"
+  "write-a-message": "Write a message",
+  "share-this": "Share this with you social Community",
+  "copied": "Copied"
 }
