--- a/apps/web/public/locales/es/project.json
+++ b/apps/web/public/locales/es/project.json
@@ -28,5 +28,7 @@
   "suicide-or-self-injury": "Suicidio o autolesión",
   "hate-speech": "Discurso de odio",
   "something-else": "Otra cosa",
-  "write-a-message": "Escribe un mensaje"
+  "write-a-message": "Escribe un mensaje",
+  "share-this": "Compartir esto con tu comunidad social",
+  "copied": "Copiado"
 }
