--- a/apps/web/public/locales/hi/project.json
+++ b/apps/web/public/locales/hi/project.json
@@ -28,5 +28,7 @@
   "suicide-or-self-injury": "आत्महत्या या आत्म-घात",
   "hate-speech": "नफ़रत भाषण",
   "something-else": "कुछ और",
-  "write-a-message": "संदेश लिखें"
+  "write-a-message": "संदेश लिखें",
+  "share-this": "अपनी सोशल समुदाय के साथ इसे शेयर करें",
+  "copied": "कॉपी किया गया"
 }
