--- a/apps/web/public/locales/ko/project.json
+++ b/apps/web/public/locales/ko/project.json
@@ -28,5 +28,7 @@
   "suicide-or-self-injury": "자살 또는 자해",
   "hate-speech": "혐오 발언",
   "something-else": "기타",
-  "write-a-message": "메시지 작성"
+  "write-a-message": "메시지 작성",
+  "share-this": "소셜 커뮤니티와 공유하기",
+  "copied": "복사되었습니다"
 }
