--- a/apps/web/public/locales/ne/project.json
+++ b/apps/web/public/locales/ne/project.json
@@ -28,5 +28,7 @@
   "suicide-or-self-injury": "आत्महत्या वा आत्म-चोट",
   "hate-speech": "नफरत भएको भाषण",
   "something-else": "केही अरु",
-  "write-a-message": "सन्देश लेख्नुहोस्"
+  "write-a-message": "सन्देश लेख्नुहोस्",
+  "share-this": "तपाईंको सामाजिक समुदायसँग यो साझा गर्नुहोस्",
+  "copied": "कॉपी किया गया"
 }
