make changes according to ivan senpai

--- a/apps/web/public/locales/en/project.json
+++ b/apps/web/public/locales/en/project.json
@@ -30,5 +30,6 @@
   "something-else": "Something else",
   "write-a-message": "Write a message",
   "share-this": "Share this with you social Community",
-  "copied": "Copied"
+  "copied": "Copied",
+  "copy": "Copy"
 }
