--- a/apps/web/public/locales/es/project.json
+++ b/apps/web/public/locales/es/project.json
@@ -30,5 +30,6 @@
   "something-else": "Otra cosa",
   "write-a-message": "Escribe un mensaje",
   "share-this": "Compartir esto con tu comunidad social",
-  "copied": "Copiado"
+  "copied": "Copiado",
+  "copy": "Copiar"
 }
