--- a/apps/web/public/locales/ko/project.json
+++ b/apps/web/public/locales/ko/project.json
@@ -30,5 +30,6 @@
   "something-else": "기타",
   "write-a-message": "메시지 작성",
   "share-this": "소셜 커뮤니티와 공유하기",
-  "copied": "복사되었습니다"
+  "copied": "복사되었습니다",
+  "copy": "복사"
 }
