--- a/apps/web/public/locales/ne/project.json
+++ b/apps/web/public/locales/ne/project.json
@@ -30,5 +30,6 @@
   "something-else": "केही अरु",
   "write-a-message": "सन्देश लेख्नुहोस्",
   "share-this": "तपाईंको सामाजिक समुदायसँग यो साझा गर्नुहोस्",
-  "copied": "कॉपी किया गया"
+  "copied": "कॉपी किया गया",
+  "copy": "कापी"
 }
