--- a/apps/web/public/locales/hi/project.json
+++ b/apps/web/public/locales/hi/project.json
@@ -30,5 +30,6 @@
   "something-else": "कुछ और",
   "write-a-message": "संदेश लिखें",
   "share-this": "अपनी सोशल समुदाय के साथ इसे शेयर करें",
-  "copied": "कॉपी किया गया"
+  "copied": "कॉपी किया गया",
+  "copy": "कॉपी"
 }
