feat: add report api (#167)
Co-authored-by: miroz devkota <mirozxy@gmail.com>

--- a/apps/web/public/locales/ne/project.json
+++ b/apps/web/public/locales/ne/project.json
@@ -1,5 +1,35 @@
 {
-  "delete-success": "Project deleted successfully",
-  "delete-fail": "Project deletion failed",
-  "are-you-sure": "Are you sure you want to delete this project?"
+  "delete-success": "प्रोजेक्ट सफलतापूर्वक हटाइयो",
+  "delete-fail": "प्रोजेक्ट हटाउन असफल भयो",
+  "are-you-sure": "के तपाईं यो प्रोजेक्ट हटाउन चाहनुहुन्छ?",
+  "created-at": "{{date}} मा सिर्जना गरिएको",
+  "created-by": "द्वारा सिर्जना गरिएको",
+  "description": "विवरण",
+  "details": "विवरणहरू",
+  "view-website": "वेबसाइट हेर्नुहोस्",
+  "view-github": "GitHub मा हेर्नुहोस्",
+  "tags": "ट्यागहरू",
+  "likes": "पसन्द",
+  "like": "पसन्द छ",
+  "liked": "पसन्द छ",
+  "report-success": "प्रोजेक्ट सफलतापूर्वक रिपोर्ट गरियो",
+  "reporting-this-post": "तपाईं यस पोस्टलाई किन रिपोर्ट गर्नुभयो?",
+  "report": "रिपोर्ट गर्नुहोस्",
+  "description-report": "तपाईंको रिपोर्ट गोपनीय छ, त्यसको बाह्यिकताबारे जानकारी छैन जब तपाईं संज्ञानजनक समस्याको रिपोर्ट गर्नुहुन्छ। यदि कसैले तत्काल खतरा मा छ, स्थानीय आपतकालीन सेवाहरू फोन गर्नुहोस्।",
+  "reason": "कारण",
+  "help": "समस्या समझ्नुहोस्।",
+  "category": "कृपया रिपोर्ट गर्न को लागि एक श्रेणी छान्नुहोस्",
+  "submit-report": "रिपोर्ट सबमिट गर्नुहोस्",
+  "spam": "स्प्याम",
+  "nudity": "नग्नता",
+  "scam": "ठगी",
+  "illegal": "गैरकानूनी",
+  "violence": "हिंसा",
+  "suicide-or-self-injury": "आत्महत्या वा आत्म-चोट",
+  "hate-speech": "नफरत भएको भाषण",
+  "something-else": "केही अरु",
+  "write-a-message": "सन्देश लेख्नुहोस्",
+  "share-this": "तपाईंको सामाजिक समुदायसँग यो साझा गर्नुहोस्",
+  "copied": "कॉपी किया गया",
+  "copy": "कापी"
 }
