--- a/apps/web/public/locales/es/project.json
+++ b/apps/web/public/locales/es/project.json
@@ -1,5 +1,35 @@
 {
-  "delete-success": "Project deleted successfully",
-  "delete-fail": "Project deletion failed",
-  "are-you-sure": "Are you sure you want to delete this project?"
+  "delete-success": "Proyecto eliminado exitosamente",
+  "delete-fail": "Error al eliminar el proyecto",
+  "are-you-sure": "¿Estás seguro de que deseas eliminar este proyecto?",
+  "created-at": "Creado el {{date}}",
+  "created-by": "Creado por",
+  "description": "Descripción",
+  "details": "Detalles",
+  "view-website": "Ver sitio web",
+  "view-github": "Ver en GitHub",
+  "tags": "Etiquetas",
+  "likes": "Me gusta",
+  "like": "Me gusta",
+  "liked": "Me gusta",
+  "report-success": "Proyecto reportado exitosamente",
+  "reporting-this-post": "¿Por qué estás reportando esta publicación?",
+  "report": "Reportar",
+  "description-report": "Tu reporte es anónimo, excepto si estás reportando una infracción de propiedad intelectual. Si alguien está en peligro inmediato, llama a los servicios de emergencia locales.",
+  "reason": "Motivo",
+  "help": "Ayúdanos a entender el problema.",
+  "category": "Por favor, seleccione una categoría para reportar",
+  "submit-report": "Enviar reporte",
+  "spam": "Spam",
+  "nudity": "Desnudez",
+  "scam": "Estafa",
+  "illegal": "Ilegal",
+  "violence": "Violencia",
+  "suicide-or-self-injury": "Suicidio o autolesión",
+  "hate-speech": "Discurso de odio",
+  "something-else": "Otra cosa",
+  "write-a-message": "Escribe un mensaje",
+  "share-this": "Compartir esto con tu comunidad social",
+  "copied": "Copiado",
+  "copy": "Copiar"
 }
