fix: add missing translations

--- a/apps/web/public/locales/es/common.json
+++ b/apps/web/public/locales/es/common.json
@@ -25,5 +25,6 @@
   "no": "No",
   "select-image": "Seleccionar Imagen",
   "create-account-or-login": "Please create an account or login for this action",
-  "sign-in-to-discover": "Sign in to discover new projects and interact"
+  "sign-in-to-discover": "Sign in to discover new projects and interact",
+  "all-rights-reserved": " ©{{year}} Project Shelf. All rights reserved."
 }
