--- a/apps/web/public/locales/ko/common.json
+++ b/apps/web/public/locales/ko/common.json
@@ -27,5 +27,6 @@
   "no": "No",
   "select-image": "Select Image",
   "create-account-or-login": "Please create an account or login for this action",
-  "sign-in-to-discover": "Sign in to discover new projects and interact"
+  "sign-in-to-discover": "Sign in to discover new projects and interact",
+  "all-rights-reserved": " ©{{year}} Project Shelf. All rights reserved."
 }
