--- a/apps/web/public/locales/es/common.json
+++ b/apps/web/public/locales/es/common.json
@@ -26,5 +26,7 @@
   "select-image": "Seleccionar Imagen",
   "create-account-or-login": "Please create an account or login for this action",
   "sign-in-to-discover": "Sign in to discover new projects and interact",
-  "all-rights-reserved": " ©{{year}} Project Shelf. All rights reserved."
+  "all-rights-reserved": " ©{{year}} Project Shelf. All rights reserved.",
+  "privacy-policy": "Política de privacidad",
+  "terms-and-conditions": "Términos y condiciones"
 }
