feat(translation): fix translation for the cropper

--- a/apps/web/public/locales/en/common.json
+++ b/apps/web/public/locales/en/common.json
@@ -23,6 +23,8 @@
   "continue": "Continue",
   "edit": "Edit",
   "delete": "Delete",
+  "save": "Save",
+  "new": "New",
   "yes": "Yes",
   "no": "No",
   "select-image": "Select Image",
