--- a/apps/web/public/locales/ko/about.json
+++ b/apps/web/public/locales/ko/about.json
@@ -1,5 +1,6 @@
 {
   "title": "Project Shelf Contributors",
   "seo-title": "About Project Shelf",
+  "about": "About",
   "contributions": "contributions"
 }
