feat(translation): added translation

--- a/apps/web/public/locales/en/about.json
+++ b/apps/web/public/locales/en/about.json
@@ -1,6 +1,7 @@
 {
   "title": "Project Shelf Contributors",
   "seo-title": "About",
+  "description": "Know more about us. A perfect place for students, professionals, and hobbyists to showcase their work.",
   "about": "About",
   "contributions": "contributions"
 }
